messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: messaging-app
    tier: backend
    version: blue
  name: messaging-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      tier: backend
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        tier: backend
        version: blue
    spec:
      containers:
      - image: godwindockerid/messaging_app
        name: messaging-app
        ports:
          - containerPort: 8000
