messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: messaging-app
    tier: backend
  name: messaging-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      tier: backend
  template:
    metadata:
      labels:
        app: messaging-app
        tier: backend
    spec:
      containers:
      - image: godwindockerid/messaging_app
        name: messaging-app
        ports:
          - containerPort: 8000

# Expose the messaging-app pod via service
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
    tier: backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
