messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service
            port:
              number: 80
---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: hello-world.example
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: web
#                 port:
#                   number: 8080
